--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -108,6 +108,7 @@
   font: 600 $font-size "Montserrat", Verdana, Geneva, Tahoma, sans-serif !important;
   white-space: break-spaces !important;
   transition: background 0.1s ease-in-out;
+  border: none !important;
 
   &:hover {
     background: $background-hover !important;
