Refactor donation button styling: rename variable and update background image
- Changed the variable name from $donate to $fuelButton in _raster.scss for clarity.
- Updated the donation button's background image in donate.scss to use the new $fuelButton variable.

--- a/src/data/_raster.scss
+++ b/src/data/_raster.scss
@@ -63,7 +63,7 @@ $youtube: url("https://i.imgur.com/usx9mk9.png");
 $vocabularyPopularity: url("https://i.imgur.com/2eXawT9.png");
 
 // Donation button
-$donate: url("https://i.imgur.com/DRxzmSe.png");
+$fuelButton: url("https://i.imgur.com/DRxzmSe.png");
 
 // Error on track (BOLT)
 $errorOnTrackBolt: url("https://i.imgur.com/78JhhAA.png");
