Update donate.scss to adjust hover colors and background styles
- Changed hover color from $yellow to a lighter shade of $orange.
- Updated background color of .avgmore from $yellow to $orange.

--- a/src/donate.scss
+++ b/src/donate.scss
@@ -205,12 +205,12 @@
             transition: color 0.15s ease-in-out !important;
 
             &:hover {
-              color: $yellow !important;
+              color: lighten($orange, 15%) !important;
             }
           }
 
           .avgmore {
-            background: $yellow !important;
+            background: $orange !important;
 
             a {
               color: $black !important;
