Refactor race status block styles: change background to background-color for consistency

--- a/src/race/race.scss
+++ b/src/race/race.scss
@@ -51,8 +51,7 @@
 
         // Race status block under typeblock bg color
         #status {
-          padding: 0 !important;
-          background: $darkgray !important;
+          background-color: $darkgray !important;
 
           table {
             width: 100% !important;
