Add semaphore image and update styles in race and header scripts
- Added a new semaphore image URL to _raster.scss.
- Updated version number in header-tampermonkey.js from 1.0.59 to 1.0.60.
- Modified race.scss to include the semaphore image as a background for the #status block, adjusted padding, and z-index for better layout.
- Reformatted background property for clarity in race.scss.

--- a/src/data/_raster.scss
+++ b/src/data/_raster.scss
@@ -4,6 +4,7 @@ $virtualKeyboard: url("https://i.imgur.com/CVbMpI4.png");
 // Speed panel background image for speed and error monitoring
 $speedPanel: url("https://i.imgur.com/c3CG7QV.png");
 $speedPanelDigitsPlace: url("https://i.imgur.com/TveD9ms.png");
+$semaphore: url("https://i.imgur.com/DEECQ4v.png");
 
 // Award images for achievements
 $medal-award: url("https://i.imgur.com/JDhJqcC.png");
