--- a/src/klavotools/complexityPanel.scss
+++ b/src/klavotools/complexityPanel.scss
@@ -7,8 +7,8 @@
   border-radius: 0 5px 5px 0 !important;
   background: $black !important;
   transition: opacity 0.15s ease-in-out !important;
-  position: absolute;
-  top: 120px;
+  position: fixed !important;
+  top: 220px;
   // overflow: hidden !important;
 
   &:hover {
